k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
  labels:
    app: wisecow
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4499
      NodePort: 31662
      name: http
